Fix invisible actions not actually being invisible, make avatar huge to please Tim

--- a/src/main/scss/components/_header.scss
+++ b/src/main/scss/components/_header.scss
@@ -66,8 +66,8 @@
 
       img {
         border-radius: 100px;
-        width: 1.5rem;
-        height: 1.5rem;
+        width: 1.625rem;
+        height: 1.625rem;
         outline: 1px solid color-mix(in srgb, var(--text-color) 10%, transparent);
         background: color-mix(in srgb, var(--text-color) 5%, transparent);
         outline-offset: -1px;
